--- a/HCI/styles.css
+++ b/HCI/styles.css
@@ -67,8 +67,8 @@ body {
         color: black;
         background-color: blue;
         border: 1px solid blue;
-        padding: 5px;
-        margin: 5px; 
+        padding: 3px;
+        margin: 2px; 
     }
 
     ul {
@@ -88,6 +88,57 @@ body {
         display: flex;
         align-items: center;
       }
+
+
+
+      article.persona {background-color: #fff; border:solid 1px #493736; float:left; margin:5px 10px; width:75%;
+      color:#111 }
+.personaInfo figure {margin:0; padding: 0;}
+.personaInfo {border-bottom:solid 1px #493736;padding:5px;overflow: hidden;}
+.personaInfo img {float:left; }
+.personaInfo .personaBackground {float:right; width:100%; }
+.personaInfo h3, .personaInfo .personaBackground h4, .personaInfo .personaBackground h5, .personaDetails h4, .personaDetails h5, .personaScenarios h5, .otherDetails h5 {margin:0 0 5px; padding:5px; background-color: #2D2D29; color: #DFECE6; }
+.personaInfo .personaBackground ul, .personaDetails ul, .personaScenarios ul, .otherDetails ul {margin:0; padding:0 5px;}
+.personaInfo p, .personaDetails p, .personaScenarios p, .otherDetails p {margin:2px; padding:0;}
+
+.personaDetails ul li {list-style-type: square; margin:0 0 0 15px;}
+.personaDetails {border-bottom:solid 1px #493736; overflow: hidden; padding: 5px;}
+.personaDetails .detailsLeft h5 {padding: 5px 5px 5px 10px;}
+.personaDetails .detailsLeft {width:100%; float:left; margin-right:5px;}
+.personaDetails .detailsLeft .leftGroup {}
+.personaDetails .detailsRight {width:100%; float: right; }
+
+.personaScenarios, .otherDetails {clear:both; padding:5px; overflow: hidden;}
+.personaScenarios {border-bottom:solid 1px #493736;}
+
+footer {clear:both; margin:5px 10px; padding:0;}
+
+@media screen and (max-width:1000px){
+	.personaInfo .personaBackground {float:left; width:100%; margin-top:5px;}
+}
+@media screen and (max-width:920px){
+	.personaDetails .detailsLeft, .personaDetails .detailsRight {width:100%; float: left; }
+	article.persona {width:98%; margin: 5px 2px;} 
+}
+
+@media print {
+	
+	body{
+		margin:0;
+		padding:0;
+		font-family:Arial, Helvetica, sans-serif;
+		font-size:14px;
+		background:#fff;
+	}
+	header {margin: 0;}
+	header #logo {display: none;}
+	article.persona {width:99%; margin:10px 2px;} 
+	.personaInfo h3, .personaInfo .personaBackground h4, .personaInfo .personaBackground h5, .personaDetails h4, .personaDetails h5, .personaScenarios h5, .otherDetails h5 {margin:0 0 5px; padding:5px; background-color: #ccc; color: #111; 
+	-webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;}
+	.personaDetails .detailsLeft {width:38%; float:left; margin-right:5px;}
+	.personaDetails .detailsRight {width:61%; float: right; }
+	.personaScenarios {border-bottom:solid 1px #493736;}
+}
 
 
    
